# rosbag-adaptive-localization-viewer

./: .gitignore  README.md  pyproject.toml
docs/: data-format.md  system-design.md
examples/: session.yaml
frontend/: index.html  package-lock.json  package.json
frontend/public/: demo-experiment.json
frontend/src/: App.tsx  mockData.ts  styles.css  types.ts
scripts/: build_experiment.ps1  run_local_api.ps1
src/rosbag_adaptive_localization_viewer/: __init__.py  builder.py  cli.py  config.py  models.py  server.py
src/rosbag_adaptive_localization_viewer/exporters/: __init__.py  experiment_json.py
src/rosbag_adaptive_localization_viewer/loaders/: __init__.py  optitrack_csv.py  rosbag2.py
src/rosbag_adaptive_localization_viewer/processing/: __init__.py  trajectories.py
